# option-pricer

./: .gitignore  LICENSE  README.md  pricer.sh
api/: Cargo.toml
api/src/: binomial.rs  black_scholes.rs  main.rs  models.rs
api/tests/: api_tests.py  unit_tests.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  Screen.tsx  api.tsx  api_calls.tsx  calls.ts  index.css  index.tsx
frontend/src/api/: api.js  api.ts  testCalls.js  testCalls.ts
frontend/src/pages/: About.tsx  Home.tsx
