[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-extensible-rate-limit = "0.2.1"
actix-rt = "2.7.0"
actix-web = "4.2.1"
serde = { version = "1.0.152", features = ["derive"] }
statrs = "0.11"
